<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fondo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.proyectosegundaev.Operaciones">

    <Button
        android:id="@+id/botonGuardar"
        android:layout_width="157dp"
        android:layout_height="54dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/guardar"
        app:layout_constraintBottom_toTopOf="@+id/botonModificar"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/botonModificar"
        android:layout_width="157dp"
        android:layout_height="54dp"
        android:layout_marginStart="18dp"
        android:layout_marginBottom="15dp"
        android:text="@string/modificar"
        app:layout_constraintBottom_toTopOf="@+id/listaNombres"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/botonBorrar"
        android:layout_width="157dp"
        android:layout_height="54dp"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="14dp"
        android:text="@string/borrar"
        app:layout_constraintBottom_toTopOf="@+id/listaNombres"
        app:layout_constraintEnd_toEndOf="parent" />

    <ListView
        android:id="@+id/listaNombres"
        android:layout_width="376dp"
        android:layout_height="159dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/botonListar"
        android:layout_width="157dp"
        android:layout_height="54dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/listado"
        app:layout_constraintBottom_toTopOf="@+id/botonBorrar"
        app:layout_constraintEnd_toEndOf="parent" />

    <Switch
        android:id="@+id/estilos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="56dp"
        android:text="@string/estilo"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/nombre"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/nombrelabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginBottom="66dp"
        android:text="@string/nombre"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/contraseñalabel"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/contraseñalabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="68dp"
        android:text="@string/email"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/direccionlabel"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/direccionlabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginBottom="64dp"
        android:text="@string/direccion"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/telefonolabel"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/telefonolabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="36dp"
        android:text="@string/telefono"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/botonGuardar"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/nombre"
        android:layout_width="304dp"
        android:layout_height="51dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="33dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/correo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/nombrelabel"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/direccion"
        android:layout_width="304dp"
        android:layout_height="51dp"
        android:layout_marginStart="11dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="27dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/telefono"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/direccionlabel"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/telefono"
        android:layout_width="304dp"
        android:layout_height="51dp"
        android:layout_marginStart="11dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/botonGuardar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/telefonolabel"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/correo"
        android:layout_width="304dp"
        android:layout_height="51dp"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="19dp"
        android:layout_marginBottom="40dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/direccion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/contraseñalabel"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/llamada"
        android:layout_width="115dp"
        android:layout_height="57dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="28dp"
        app:layout_constraintBottom_toTopOf="@+id/nombre"
        app:layout_constraintEnd_toStartOf="@+id/estilos"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/stat_sys_phone_call"
        tools:ignore="SpeakableTextPresentCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>