<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fondo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.proyectosegundaev.Login">

    <Button
        android:id="@+id/Registro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="252dp"
        android:text="@string/registrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contraseña" />

    <Button
        android:id="@+id/Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="36dp"
        android:text="Iniciar sesion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contraseña" />

    <Switch
        android:id="@+id/estilos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="44dp"
        android:text="@string/estilo"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="64dp" />

    <TextView
        android:id="@+id/contraseñalabel"
        android:layout_width="83dp"
        android:layout_height="31dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="28dp"
        android:text="Contraseña:"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/contraseña"
        app:layout_constraintTop_toBottomOf="@+id/emaillabel2" />

    <TextView
        android:id="@+id/emaillabel2"
        android:layout_width="49dp"
        android:layout_height="26dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="58dp"
        android:text="Email:"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/email2"
        app:layout_constraintTop_toBottomOf="@+id/titulo" />

    <EditText
        android:id="@+id/contraseña"
        android:layout_width="210dp"
        android:layout_height="43dp"
        android:layout_marginTop="61dp"
        android:layout_marginEnd="44dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email2" />

    <TextView
        android:id="@+id/titulo"
        android:layout_width="316dp"
        android:layout_height="76dp"
        android:layout_marginTop="41dp"
        android:layout_marginEnd="45dp"
        android:text="@string/iniciosesion"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/estilos" />

    <EditText
        android:id="@+id/email2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="45dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titulo" />

</androidx.constraintlayout.widget.ConstraintLayout>